# universal-gpt-server

./: Dockerfile  main.py  pyproject.toml  requirements.txt
api/: chat_compilation.py  login.py
api/utils/: chat_compilation_utils.py  user_utils.py
db/models/: User.py
pytest/: test_compilation.py  test_sample.py
schemas/: chat.py  user.py
src/: main.py
src/api/: chat_compilation.py  signup.py  whisper.py
src/api/utils/: openai_utils.py
src/api/websocket/: web_sockets.py
src/auth/: auth.py
src/db/: database.py
src/db/models/: User.py
src/openai_chat/: assistant.py  openai_connection.py
src/openai_chat/token_calculator/: calculator.py
