[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["muhammad-1254 <usmansoomro1234@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
sqlalchemy = "^2.0.25"
pydantic = "^2.5.3"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
uvicorn = "^0.26.0"
psycopg2 = "^2.9.9"
openai = "1.8.0"
python-dotenv = "^1.0.0"
tiktoken = "^0.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
